Don't show serviceID

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <input v-model="settings.serviceToken"
                         class="form-control"
                         autofocus
-                        type="text"
+                        type="password"
                         @keyup.enter="connect"
                         placeholder="Service token"
                     >
