--- a/index.html
+++ b/index.html
@@ -2657,7 +2657,7 @@
             <template v-else>
                 <div class="col-12"> <!-- Header -->
                     <div class="d-flex align-items-center mb-2">
-                        <img src="/data/CML-logo.png" class="mr-1" style="max-width: 128px; max-height: 128px;" title="CML logo">
+                        <img src="data/CML-logo.png" class="mr-3" style="max-width: 128px; max-height: 128px;" title="CML logo">
                         <div class="d-flex flex-row flex-grow-1">
                             <div class="flex-grow-1">
                                 <h2>{{saladfork.report.data.outfits.map(o => o.tag).join(', ')}} {{saladfork.report.data.outfits.length > 1 ? 'Joint Ops' : 'Ops'}} Report</h2>
