--- a/index.html
+++ b/index.html
@@ -215,9 +215,7 @@
 <body>
     <div class="container-fluid" id="app" style="height: 100%;" v-cloak>
 
-        <template v-if="settings.darkMode == true">
-            <link rel="stylesheet" href="./dark-theme.min.css">
-        </template>
+        <link rel="stylesheet" href="./dark-theme.min.css">
 
         <div v-if="view == 'setup' && relic.showUI != false" class="d-flex" style="flex-direction: column;">
             <div class="w-25 align-self-center pt-5">
@@ -318,11 +316,6 @@
                 <div class="btn-group w-100 mt-2">
                     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#contact-modal">
                         Info/Contact
-                    </button>
-                    <button type="button" class="btn" :class="[ settings.darkMode == true ? 'btn-dark' : 'btn-light' ]"
-                            @click="settings.darkMode = !settings.darkMode">
-
-                        {{settings.darkMode == false ? 'Use dark mode' : 'Use light mode'}}
                     </button>
                 </div>
 
@@ -783,11 +776,6 @@
                     <div class="btn-group w-100 my-2">
                         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#contact-modal">
                             Info/Contact
-                        </button>
-                        <button type="button" class="btn" :class="[ settings.darkMode == true ? 'btn-dark' : 'btn-light' ]"
-                                @click="settings.darkMode = !settings.darkMode">
-
-                            {{settings.darkMode == false ? 'Use dark mode' : 'Use light mode'}}
                         </button>
                     </div>
                 </div>
@@ -2657,7 +2645,7 @@
             <template v-else>
                 <div class="col-12"> <!-- Header -->
                     <div class="d-flex align-items-center mb-2">
-                        <img src="/data/CML-logo.png" class="mr-1" style="max-width: 128px; max-height: 128px;" title="CML logo">
+                        <img src="data/CML-logo.png" class="mr-3" style="max-width: 128px; max-height: 128px;" title="CML logo">
                         <div class="d-flex flex-row flex-grow-1">
                             <div class="flex-grow-1">
                                 <h2>{{saladfork.report.data.outfits.map(o => o.tag).join(', ')}} {{saladfork.report.data.outfits.length > 1 ? 'Joint Ops' : 'Ops'}} Report</h2>
