Mention tweak in Info

--- a/index.html
+++ b/index.html
@@ -3067,6 +3067,20 @@
                                 https://github.com/Varunda/topt/
                             </a>
                         </p>
+
+                        <hr>
+
+                        <p>
+                            It has been modified by SaladFork ([CML] CallMeQ) to
+                            create the custom SaladFork report with hopefully "fun"
+                            statistics to report at the end of ops.
+                        </p>
+
+                        <p>
+                            If you find a bug with or have ideas for the
+                            SaladFork report, feel free to reach out on Discord
+                            to Forks#7374.
+                        </p>
                     </div>
                 </div>
             </div>
