Fix loading turtle

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                     class="btn btn-primary"
                                     type="button">
 
-                                    <img v-if="loadingOutfit == true" class="loading" src="/data/loading.png" style="max-height: 1.25rem;">
+                                    <img v-if="loadingOutfit == true" class="loading" src="data/loading.png" style="max-height: 1.25rem;">
 
                                     Add
                                 </button>
