--- a/index.html
+++ b/index.html
@@ -3074,10 +3074,10 @@
                         <hr>
 
                         <p>
-                            This is a modified version by SaladFork ([CML]
-                            CallMeQ) to include a custom SaladFork report with
-                            hopefully "fun" statistics to report at the end of
-                            ops.
+                            This is a modified version by SaladFork (<code>[CML]
+                            CallMeQ</code>) to include a custom SaladFork report
+                            with hopefully "fun" statistics to report at the end
+                            of ops.
                         </p>
 
                         <p>
